Upgrade Debian 8 to 9

--- a/preseed/debian.cfg
+++ b/preseed/debian.cfg
@@ -49,10 +49,13 @@ d-i user-setup/encrypt-home boolean false
 # packages
 tasksel tasksel/first multiselect standard
 d-i pkgsel/include string openssh-server nfs-common curl ntp acpid sudo bzip2 \
-  rsync git ca-certificates
+  rsync git ca-certificates net-tools
 d-i pkgsel/upgrade select full-upgrade
 d-i pkgsel/update-policy select none
 d-i popularity-contest/participate boolean false
+d-i preseed/late_command string sed -i '/^deb cdrom:/s/^/#/' /target/etc/apt/sources.list
+apt-cdrom-setup apt-setup/cdrom/set-first boolean false
+apt-mirror-setup apt-setup/use_mirror boolean true
 postfix postfix/main_mailer_type select No configuration
 
 # boot loader
